<resources>
    <string name="app_name">Github User App</string>
    <string name="full_name">name</string>
    <string name="uname">username</string>
    <string name="example_repo">30</string>
    <string name="name_repository">Repository</string>
    <string name="example_following">310</string>
    <string name="name_following">Following</string>
    <string name="example_followers">70</string>
    <string name="name_followers">Followers</string>
    <string name="content_location">Location</string>
    <string name="content_company">company</string>
    <string name="share">Share</string>
    <string name="thumbnail_user">Thumbnail User</string>
    <string name="search_hint">Search User\'s</string>
    <string name="data_user_is_empty">Data User\'s is Empty</string>
    <string name="user_not_found">User not found</string>
    <string name="image_profile">Image Profile</string>
    <string name="icon_location">icon_location</string>
    <string name="icon_company">icon_company</string>
    <string name="icon_splash">icon_splash</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favoritebutton">favoritebutton</string>
</resources>


