<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/img_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/img_item_photo"
        style="@style/ImageProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/image_profile" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextContent.primary"
        android:layout_marginTop="4dp"
        android:text="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextContent.subtitle"
        android:text="@string/uname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_jml_repo"
        style="@style/TextContent.count"
        android:text="@string/example_repo"
        app:layout_constraintEnd_toEndOf="@+id/tv_repo"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/tv_repo"
        app:layout_constraintTop_toBottomOf="@+id/ic_company" />

    <TextView
        android:id="@+id/tv_repo"
        style="@style/TextContent.secondary"
        android:layout_marginEnd="28dp"
        android:text="@string/name_repository"
        app:layout_constraintEnd_toStartOf="@+id/tv_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_jml_repo" />

    <TextView
        android:id="@+id/tv_jml_following"
        style="@style/TextContent.count"
        android:text="@string/example_following"
        app:layout_constraintEnd_toEndOf="@+id/tv_following"
        app:layout_constraintStart_toStartOf="@+id/tv_following"
        app:layout_constraintTop_toBottomOf="@+id/ic_company" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/TextContent.secondary"
        android:text="@string/name_following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jml_following" />

    <TextView
        android:id="@+id/tv_jml_followers"
        style="@style/TextContent.count"
        android:text="@string/example_followers"
        app:layout_constraintEnd_toEndOf="@+id/tv_followers"
        app:layout_constraintStart_toStartOf="@+id/tv_followers"
        app:layout_constraintTop_toBottomOf="@+id/ic_company" />

    <TextView
        android:id="@+id/tv_followers"
        style="@style/TextContent.secondary"
        android:layout_marginStart="28dp"
        android:text="@string/name_followers"
        app:layout_constraintStart_toEndOf="@+id/tv_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_jml_followers" />

    <ImageView
        android:id="@+id/ic_loc"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/icon_location"
        android:src="@drawable/ic_baseline_location_on_24"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/TextContent.value"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="30dp"
        android:visibility="visible"
        android:text="@string/content_location"
        app:layout_constraintBottom_toBottomOf="@+id/ic_loc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ic_loc"
        app:layout_constraintTop_toTopOf="@+id/ic_loc"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ic_company"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:visibility="visible"
        android:src="@drawable/ic_baseline_business_center_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_loc"
        android:contentDescription="@string/icon_company" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/TextContent.value"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="30dp"
        android:visibility="visible"
        android:text="@string/content_company"
        app:layout_constraintBottom_toBottomOf="@+id/ic_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ic_company"
        app:layout_constraintTop_toTopOf="@+id/ic_company"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_following"
        app:tabIndicatorColor="@color/secondaryColor"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:contentDescription="@string/favoritebutton" />

</androidx.constraintlayout.widget.ConstraintLayout>